Camera purview Activity finish!

--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -3,11 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="setn2Server"
+        android:id="@+id/button2"
+        android:layout_alignTop="@+id/id_btn_shot"
+        android:layout_toRightOf="@+id/id_btn_shot"
+        android:layout_toEndOf="@+id/id_btn_shot"
+        android:layout_gravity="center_horizontal" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/id_imageView_rst"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_launcher" />
-
+        android:id="@+id/id_imageView_result"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
